api/pokeapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokeapi
  labels:
    app: pokeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokeapi
  template:
    metadata:
      name: pokeapi
      labels:
        app: pokeapi
    spec:
      containers:
        - name: pokeapi
          image: thomassazeratdev/microservice:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
