api/pokeapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokeapi
spec:
  selector:
    app: pokeapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30002
  type: NodePort
