api/pokeapi-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pokeapi-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/pokeapi`)
      kind: Rule
      services:
        - name: pokeapi
          port: 8000
      middlewares:
        - name: global-strip-prefix
